fixing spacing for iphone compatibility

--- a/src/App.css
+++ b/src/App.css
@@ -420,6 +420,7 @@ transform: scale(1.2);
   @media screen and (max-width: 570px){
     #projectsContainer{
       align-items: center;
+      -webkit-align-items: center;
     }
     #intro{
       font-size: 23px;
@@ -523,8 +524,8 @@ transform: scale(1.2);
     }
 
     #projectsContainer{
-      padding-bottom:0; 
-      -webkit-padding-bottom:0;
+      padding:0; 
+      -webkit-padding:0;
       height:300vh;
       -webkit-height:300vh;
       justify-content: center;
